# swagger/swagger.json
@@ -35,6 +35,10 @@
     {
       "name": "EventManagement",
       "description": "APIs quản lý sự kiện"
+    },
+    {
+      "name": "ContactManagement",
+      "description": "APIs quản lý liên hệ"
     }
   ],
   "paths": {
@@ -84,6 +88,100 @@
         "responses": {
           "200": {
             "description": "Lấy thông tin thành công thành công"
+          },
+          "401": {
+            "description": "Lỗi xác thực"
+          },
+          "500": {
+            "description": "Server gặp lỗi"
+          }
+        }
+      }
+    },
+    "/api/contact/addContact": {
+      "post": {
+        "summary": "Gửi liên hệ",
+        "tags": ["ContactManagement"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "phone": {
+                    "type": "string"
+                  },
+                  "address": {
+                    "type": "string"
+                  },
+                  "message": {
+                    "type": "string"
+                  }
+                },
+                "required": ["name", "email", "phone", "address", "message"]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Gửi liên hệ thành công"
+          },
+          "401": {
+            "description": "Lỗi xác thực"
+          },
+          "500": {
+            "description": "Server gặp lỗi"
+          }
+        }
+      }
+    },
+    "/api/contact/getContactList": {
+      "get": {
+        "summary": "Lấy danh sách liên hệ",
+        "tags": ["ContactManagement"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Lấy danh sách thành công"
+          },
+          "401": {
+            "description": "Lỗi xác thực"
+          },
+          "500": {
+            "description": "Server gặp lỗi"
+          }
+        }
+      }
+    },
+    "/api/contact/getContactInfor": {
+      "get": {
+        "summary": "Lấy thông tin liên hệ",
+        "tags": ["ContactManagement"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Lấy danh sách thành công"
           },
           "401": {
             "description": "Lỗi xác thực"
